style: update page

--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ author: P'Min
 ###############################################
 
 navbar-links:
-  About Me: "https://pminn.github.io/"
+  My Website: "https://pminn.github.io/"
 
 ################
 # --- Logo --- #
