test: change markdown parser

--- a/_config.yml
+++ b/_config.yml
@@ -255,7 +255,7 @@ navbar-var-length: false
 
 # Output options (more information on Jekyll's site)
 # timezone: "America/Toronto"
-markdown: kramdown
+markdown: GFM
 highlighter: rouge
 permalink: /:year-:month-:day-:title/
 paginate: 5
