--- a/_config.yml
+++ b/_config.yml
@@ -244,7 +244,7 @@ navbar-var-length: false
 ################
 
 # Ruby Date Format to show dates of posts
-# date_format: "%B %-d, %Y"
+date_format: "YYYY 年 M 月 d 日"
 
 # Facebook App ID
 #fb_app_id: ""
@@ -254,7 +254,7 @@ navbar-var-length: false
 #################################################################################
 
 # Output options (more information on Jekyll's site)
-# timezone: "America/Toronto"
+timezone: "Asia/Taipei"
 markdown: GFM
 highlighter: rouge
 permalink: /:year-:month-:day-:title/
