feat: add posts and update style

--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@
 ############################
 
 # Name of website
-title: P'Min's Note
+title: P'Min's Blog
 
 # Your name to show in the footer
 author: P'Min
